src/z80asm/z80asm2/t/20-preproc/expected/binary_01.txt
% z88dk-z80asm -v -dump-after-directives t/20-preproc//input/binary_01.asm
Define constant: __CPU_ZILOG__ = 1
Define constant: __CPU_Z80__ = 1
Assembling t/20-preproc/input/binary_01.asm...
t/20-preproc/input/binary_01.asm:1:7: error: Expected filename after BINARY
    binary ; no input file
          ^
